Przygotowanie pod angulara

--- a/app/blocks/panelWyswietlUser/panelWyswietlUser.sass
+++ b/app/blocks/panelWyswietlUser/panelWyswietlUser.sass
@@ -107,7 +107,12 @@
         background: #00a65a
         &:hover
           background: #008d4c
-
+      &.red
+        background: #a60605
+        float: left
+        order: 3
+        &:hover
+          background: #b00a11
   &__content
     //border-top: 2px solid #D2E3E9
     padding-top: 15px
