--- a/app/jade/panelWyswietlUser.jade
+++ b/app/jade/panelWyswietlUser.jade
@@ -23,7 +23,7 @@
             option(value=1) Aktywny
     .panelWyswietlUser__navigation
       button.panelWyswietlUser__navigation__item.green Edytuj Użytkownika
-      button.panelWyswietlUser__navigation__item.green Usuń Użytkownika
+      button.panelWyswietlUser__navigation__item.red Usuń Użytkownika
       a(href="#/user").panelWyswietlUser__navigation__item.-abort Anuluj
   a(href="#/")
     span.panelWyswietlUser__close
