--- a/app/blocks/panelUsers/_panelUsers.sass
+++ b/app/blocks/panelUsers/_panelUsers.sass
@@ -1,12 +1,6 @@
 @charset "UTF-8"
 .panelUsers
   min-width: 960px
-  +TAB_MAX
-    position: relative !important
-    width: 100% !important
-    margin: 55px auto 0
-    //bottom: 0 !important
-    top: 0 !important
 
   &.-hidden
     opacity: 0
@@ -165,6 +159,8 @@
           padding-right: 0
 
         input
+          padding: 0 10px
+          font-size: 16px
           min-width: 300px
           height: 40px
           outline: none
