--- a/app/blocks/main.sass
+++ b/app/blocks/main.sass
@@ -25,20 +25,22 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 @import "mixin"
 @import "grid"
 @import "typography"
-
 @import "animation"
 
 /* ADDONS
  *==========================================================================
 @import "../bower_components/primer-css/scss/primer"
+@import "../bower_components/angular-responsive-tables/release/angular-responsive-tables.css"
+$ionicons-font-path: "../bower_components/Ionicons/fonts"
+@import "../bower_components/Ionicons/scss/ionicons"
+@import "../bower_components/responsive-tables-js/dist/responsivetables.css"
 
 /* WEBSITE BLOCKS
  *==========================================================================
 @import "googleMaps/googleMaps"
 @import "header/header"
 
-@import "drag/dragger"
-@import "panel/panel"
+@import "panels/panels"
 
 @import "panelWelcome/panelWelcome"
 @import "panelLogin/panelLogin"
