--- a/app/jade/_head.jade
+++ b/app/jade/_head.jade
@@ -6,7 +6,7 @@ head
 
     link(rel='shortcut icon', href='/img/favicon/favicon.ico')
 
-    ///script.
+    script.
         document.write('<script src="http://'
                 + (location.host || 'localhost').split(':')[0]
                 + ':35729/livereload.js"></'
@@ -21,6 +21,8 @@ head
     script(src="bower_components/angular/angular.min.js")
     script(src="bower_components/angular-cookies/angular-cookies.min.js")
     script(src="bower_components/angular-route/angular-route.min.js")
+    script(src="bower_components/angular-responsive-tables/release/angular-responsive-tables.js")
+    //script(src="bower_components/responsive-tables-js/dist/responsivetables.js")
     script(src="//code.jquery.com/ui/1.11.4/jquery-ui.js")
 
     <!-- bower:css -->
