--- a/app/blocks/_animation.sass
+++ b/app/blocks/_animation.sass
@@ -1,1 +1,67 @@
 @charset "UTF-8"
+@keyframes LikeJump
+  0%
+    transform: rotate(0deg)
+  25%
+    transform: rotate(30deg) translate(1px)
+  50%
+    transform: rotate(0deg)
+  75%
+    transform: rotate(-30deg) translate(-1px)
+  100%
+    transform: rotate(0deg)
+@keyframes MoveLeftLink
+  0%
+    transform: translate(0)
+  50%
+    transform: translate(-3px, 0)
+  100%
+    transform: translate(0px, 0)
+@keyframes MoveRightLink
+  0%
+    transform: translate(0)
+  50%
+    transform: translate(3px, 0)
+  100%
+    transform: translate(0px, 0)
+@keyframes MoveBottomLink
+  0%
+    transform: translate(0)
+  50%
+    transform: translate(0, 5px)
+  100%
+    transform: translate(0px, 0)
+@keyframes imageAnimation
+  0%
+    opacity: 0
+    animation-timing-function: ease-in
+  8%
+    opacity: 1
+    animation-timing-function: ease-out
+  17%
+    opacity: 1
+  25%
+    opacity: 0
+  100%
+    opacity: 0
+@keyframes titleAnimation
+  0%
+    opacity: 0
+  8%
+    opacity: 1
+  17%
+    opacity: 1
+  19%
+    opacity: 0
+  100%
+    opacity: 0
+@keyframes BannerBlur
+  0%
+    opacity: 0
+  70%
+    opacity: 1
+  100%
+    opacity: 0
+
+
+
