--- a/app/blocks/_typography.sass
+++ b/app/blocks/_typography.sass
@@ -2,31 +2,131 @@
 
 /* WEBSITE FONTS/STYLIST
  *==========================================================================
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700italic,700,100,100italic,900,900italic&subset=latin,latin-ext)
-//@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,700&subset=latin,latin-ext)
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900,900italic&subset=latin,latin-ext)
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300&subset=latin,latin-ext)
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons&subset=latin,latin-ext)
 
-body
-  font-family: 'Lato', sans-serif
-  font-size: 14px
-  color: hsl(0, 0, 0)
-  line-height: 1.5
-  font-weight: 300
+=Roboto
+  font-family: Roboto, sans-serif
+=RobotoSlab
+  font-family: Roboto Slab, sans-serif
 
-footer
-  color: white
+=Material
+  font-family: Material Icons
+=AwesomeFonts
+  font-family: FontAwesome
+=Ionicons
+  font-family: Ionicons
+
+/* WEBSITE TYPEBASE
+ *==========================================================================
+
+// Typesetting variables. Edit these!
+$baseFontSize: 14 // in pixels. This would result in 22px on desktop
+$baseLineHeight: 1.2 // how large the line height is as a multiple of font size
+$leading: $baseLineHeight * 1rem
+
+$scale: 1.414
+
+
+html
+  /* Change html typefaces here */
+  font-family: Roboto, sans-serif
+  font-size: $baseFontSize / 16 * 100%
+
+  -webkit-font-smoothing: antialiased
+
+// -webkit-text-size-adjust: auto
+// -moz-text-size-adjust: auto
+// -ms-text-size-adjust: auto
+// -o-text-size-adjust: auto
+// text-size-adjust: auto
+
+p
+  line-height: $leading
+  margin-top: $leading
+  margin-bottom: 0
+
+ul, ol
+  margin-top: $leading
+  margin-bottom: $leading
+  li
+    line-height: $leading
+  ul, ol
+    margin-top: 0
+    margin-bottom: 0
+
+blockquote
+  line-height: $leading
+  margin-top: $leading
+  margin-bottom: $leading
+
+/* Headings */
+h1, h2, h3, h4, h5, h6
+  /* Change heading typefaces here */
+  font-family: sans-serif
+  margin-top: $leading
+  margin-bottom: 0
+  line-height: $leading
+
+h1
+  font-size: 3 * $scale * 1rem
+  line-height: 3 * $leading
+  margin-top: 2 * $leading
+h2
+  font-size: 2 * $scale * 1rem
+  line-height: 2 * $leading
+  margin-top: 2 * $leading
+h3
+  font-size: 1 * $scale * 1rem
+h4
+  font-size: $scale / 2 * 1rem
+h5
+  font-size: $scale / 3 * 1rem
+h6
+  font-size: $scale / 4 * 1rem
+
+/* Tables */
+table
+  margin-top: $leading
+  border-spacing: 0px
+  border-collapse: collapse
+
+  td, th
+    padding: 0
+    line-height: $baseLineHeight * $baseFontSize - 0px
+
+/* Code blocks */
+code
+  // Forces text to constrain to the line-height. Not ideal, but works.
+  vertical-align: bottom
+
+/* Leading paragraph text */
+.lead
+  font-size: $scale * 1rem
+
+/* Hug a the block above you */
+.hug
+  margin-top: 0
 
 a
   color: inherit
   text-decoration: none
+  cursor: pointer
 
   &:hover
     text-decoration: underline
 
-b
-  font-weight: 700 
+b, strong
+  font-weight: 800
+  cursor: default
+
+i, em
+  font-style: italic
+  cursor: default
+u
+  text-decoration: underline
+  cursor: default
 
 input, textarea
   font-family: Lato, sans-serif
-  
-=semibold
-  font-weight: 600
