--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -1,13 +1,17 @@
 doctype html
 html(lang="pl" ng-app="app")
   include _head.jade
-  body#body
-    include _header.jade
-    #containerDrag
+  body
+    .headerholder
+      include _header.jade
+    .panels
+      div(ng-view)
+      .panels__close
+        a(href="#/")
+          i.fa.fa-angle-double-left
+    .wrapper
       .googleMaps
         .googleMaps__API#googleMaps
-      .dragger
-        div(ng-view)
     script(src="app.js")
 
 
