--- a/app/jade/panelAutobusy.jade
+++ b/app/jade/panelAutobusy.jade
@@ -1,49 +1,66 @@
-.panelAutobusy.panel
-  .panelAutobusy__title Panel Zarządzania Autobusami
+.panelAutobusy
+  .panelAutobusy__title Zarządzanie autobusami
+  .panelAutobusy__fastTravel
+    span
+      a(href="#/")
+        i.fa.fa-home
+        | Home
+    span.-active
+      a(href="#/home/") Zarządzanie Autobusami
   .panelAutobusy__wrapper
-    .panelAutobusy__content
-      .panelAutobusy__content__Title Lista Autobusów
-      .panelAutobusy__content__Filtr
-        .panelAutobusy__content__Filtr__item
-          input(placeholder="Szukaj autobusu")
-        .panelAutobusy__content__Filtr__item
-            select
-              option(value="") Status
-              option(value=0) Nieaktywny
-              option(value=1) Aktywny
-              option(value=2) W trasie
-              option(value=2) W trasie
-        .panelAutobusy__content__Filtr__item
-
-            select
-              option(value="") Typ
-              option(value=0) Normalny
-              option(value=1) Przegubowy
-        .panelAutobusy__content__Filtr__item.check
-
-              input(type="checkbox")#czyautobusmabiletomat
-              label(for="czyautobusmabiletomat")
-              p Biletomat
-      .panelAutobusy__contentList
-
-        .panelList
-          .panelList__header
-            .panelList__headeritem Typ
-            .panelList__headeritem Numer Autobusu
-            .panelList__headeritem Status
-            .panelList__headeritem Biletomat
-            .panelList__headeritem Szczegóły
-          .panelAutobusy__list.panelList__content#GetBusList
-            .panelList__item
-              .panelList__itemCell
-                .fa.fa-bus
-              .panelList__itemCell Przykładowy
-              .panelList__itemCell Aktywny
-              .panelList__itemCell
-                .fa.fa-times-circle-o
-              a(href="#/bus/show").panelList__itemCell Zobacz
+    .panelAutobusy__subtitle Flota Autobusów
+    .panelAutobusy__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
     .panelAutobusy__navigation
       a(href="#/bus/add").panelAutobusy__navigation__item Dodaj Autobus
-  a(href="#/")
-    span.panelAutobusy__close
-      span.panelAutobusy__icon.fa.fa-times
+    .panelAutobusy__filtrs
+      .panelAutobusy__filtr
+        label Numer VIN
+        input(placeholder="Szukaj Autobusu...")
+      .panelAutobusy__filtr
+        label Typ autobusu
+        select
+          option(value="") Typ
+          option(value=0) Normalny
+          option(value=1) Przegubowy
+      .panelAutobusy__filtr
+        label Status
+        select
+          option(value="") Status
+          option(value=0) Nieaktywny
+          option(value=1) Aktywny
+          option(value=2) W trasie
+          option(value=2) W trasie
+      .panelAutobusy__filtr
+        label Biletomat
+        input(type="checkbox")#czyBiletomat
+        label(for="czyBiletomat").-biletomat
+      .panelAutobusy__table
+        table.responsive(wt-responsive-table)
+          tr
+            th Numer VIN
+            th Typ Autobusu
+            th Status
+            th Biletomat
+            th Zarządzanie
+          tr
+            td 123456789
+            td Normalny
+            td Aktywny
+            td Tak
+            td
+              a(href="#").navigation
+                i.ionicons.ion-ios-location
+              a(href="#").navigation
+                i.ionicons.ion-edit
+              a(href="#").navigation
+                i.ionicons.ion-android-delete.-red
+
+          tr
+            td ..
+            td ..
+            td ..
+            td ..
+            td ..
+
+
+
