--- a/app/jade/panelAutobusy.jade
+++ b/app/jade/panelAutobusy.jade
@@ -6,7 +6,7 @@
         i.fa.fa-home
         | Home
     span.-active
-      a(href="#/home/") Zarządzanie Autobusami
+      a(href="#/bus") Zarządzanie Autobusami
   .panelAutobusy__wrapper
     .panelAutobusy__subtitle Flota Autobusów
     .panelAutobusy__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
