--- a/app/jade/panelDodajAutobus.jade
+++ b/app/jade/panelDodajAutobus.jade
@@ -6,9 +6,9 @@
         i.fa.fa-home
         | Home
     span
-      a(href="#/home/") Zarządzanie Autobusami
+      a(href="#/bus") Zarządzanie Autobusami
     span.-active
-      a(href="#/home/add") Dodaj Autobus
+      a(href="#/bus/add") Dodaj Autobus
   .panelDodajAutobus__wrapper
     .panelDodajAutobus__subtitle Dodawanie pojazdu do floty
     .panelDodajAutobus__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
