--- a/app/blocks/panelDodajUser/_panelDodajUser.sass
+++ b/app/blocks/panelDodajUser/_panelDodajUser.sass
@@ -1,12 +1,41 @@
 @charset "UTF-8"
 .panelDodajUser
-  min-width: 700px
-  +TAB_MAX
-    position: relative !important
-    width: 100% !important
-    margin: 55px auto 0
-    //bottom: 0 !important
-    top: 0 !important
+  &__title
+    padding: 0 40px
+    background-color: #2196F3
+    height: 40px
+    color: white
+    text-align: center
+    line-height: 40px
+    font-size: 1.3em
+    +Roboto
+  &__fastTravel
+    padding: 10px 15px
+    text-transform: uppercase
+    +Roboto
+    font-size: 0.7em
+    span
+      &:after
+        content: '\f054'
+        font-family: FontAwesome
+        margin: 0 5px
+        font-size: 0.8em
+        vertical-align: text-bottom
+      &:last-of-type
+        &:after
+          content: ''
+      a
+        color: #222
+        text-decoration: none
+        i
+          margin-right: 3px
+      &:hover
+        a
+          color: #2196F3
+      &.-active
+        a
+          color: #208de6
+          font-weight: 500
   &.-hidden
     opacity: 0
     z-index: 0
@@ -18,47 +47,15 @@
     padding: 20px
     +TAB_MAX
       overflow: scroll
-  &__title
-    font-family: Lato, sans-serif
-    font-weight: 500
-
-    font-size: 15px
-
-    text-align: center
-
-    background: #3c8dbc
-    color: #fff
-    padding: 5px
-    opacity: 0.9
-
-    +PHONE_ONLY
-      text-align: center
-
   &__subtitle
-    font-family: Lato, sans-serif
-    font-weight: 300
-    line-height: 26px
-    margin-left: 3px
-    font-size: 12px
-    letter-spacing: 2px
-    text-align: left
-
-    color: #222
-    font-style: italic
-    +PHONE_ONLY
-      text-align: center
-      font-size: 12px
-      font-style: normal
+    +Roboto
+    color: #22282B
+    font-size: 1.5em
+    line-height: 1.6em
+    border-bottom: 1px solid rgba(0,0,0,0.3)
   &__text
-    font-family: Lato, sans-serif
-    font-weight: 700
-    max-width: 350px
-    margin: 0 auto
-    font-size: 16px
-    line-height: 1.3
-    letter-spacing: 1.25px
-    text-align: center
-    color: #999
+    color: #88969F
+    padding: 5px
   &__alert
     font-family: Lato, sans-serif
     font-weight: 400
@@ -77,7 +74,6 @@
       color: firebrick
     &.-hidden
       display: none
-
   &__navigation
     margin-top: 20px
     margin-bottom: 5px
@@ -135,43 +131,24 @@
           margin-right: 2px
 
         overflow: hidden
-        flex-basis: 50%
+        flex-basis: 33%
         padding: 10px
         margin: 5px 0
 
-        input,input[type="password"]
-          padding: 0 10px
-          height: 40px
-          box-shadow: none !important
-          outline: none
-          font-weight: 400
-          max-width: 300px
-          width: 100%
-          display: block
-          border-radius: 0
-          border-top: 0
-          border-left: 0
-          border-right: 0
-          border-bottom: 2px solid #D2E3E9
-          font-size: 16px
-          &:focus
-            border-bottom: 2px solid #4AAED4
-        select
-          height: 40px
-          box-shadow: none !important
-          outline: none
-          font-weight: 400
-          max-width: 300px
-          width: 100%
-          display: block
-          border-radius: 0
-          border-top: 0
-          border-left: 0
-          border-right: 0
-          border-bottom: 2px solid #D2E3E9
-          font-size: 16px
-          &:focus
-            border-bottom: 2px solid #4AAED4
+      input, select
+        width: 100%
+        height: 40px
+        border-radius: 4px
+        border: none
+        border-bottom: 1px solid rgba(128, 128, 128, 0.6)
+        outline: none
+        padding: 8px
+        background-color: transparent
+        box-shadow: none
+
+
+
+
   &__close
     transition: opacity 0.36s ease
     position: absolute
@@ -183,7 +160,7 @@
     color: #fff
     &:hover
       opacity: 1
-    .panelDodajUser_icon
+    .panelDodajAutobus__icon
       font-size: 1.8em !important
   &__icon
     font-size: 3em
