--- a/app/jade/panelPrzystanki.jade
+++ b/app/jade/panelPrzystanki.jade
@@ -1,44 +1,59 @@
-.panelPrzystanki.panel
-  .panelPrzystanki__title Panel Zarządzania Przystankami
+.panelPrzystanki
+  .panelPrzystanki__title Zarządzanie przystankami
+  .panelPrzystanki__fastTravel
+    span
+      a(href="#/")
+        i.fa.fa-home
+        | Home
+    span.-active
+      a(href="#/busstop") Zarządzanie Przystankami
   .panelPrzystanki__wrapper
-    .panelPrzystanki__content
-      .panelPrzystanki__content__Title Lista Przystanków
-      .panelPrzystanki__content__Filtr
-        .panelPrzystanki__content__Filtr__item
-          input(placeholder="Szukaj przystanku")
-        .panelPrzystanki__content__Filtr__item
-          input(placeholder="Szukaj ulicy")
-
-          //input(placeholder="Typ autobusu")
-        .panelPrzystanki__content__Filtr__item.check
-          input(type="checkbox")#czyprzystanekmabiletomat
-          label(for="czyprzystanekmabiletomat")
-          p Biletomat
-        .panelPrzystanki__content__Filtr__item.check
-          input(type="checkbox")#czyprzystanekmakiosk
-          label(for="czyprzystanekmakiosk")
-          p Kiosk
-      .panelPrzystanki__contentList
-
-        .panelList
-          .panelList__header
-            .panelList__headeritem Nazwa przystanku
-            .panelList__headeritem Ulica
-            .panelList__headeritem Biletomat
-            .panelList__headeritem Kiosk
-            .panelList__headeritem Szczegóły
-          .panelPrzystanki__list.panelList__content#GetBusstopList
-            .panelList__item
-              .panelList__itemCell Przykładowa
-              .panelList__itemCell Przykładowa
-              .panelList__itemCell
-                .fa.fa-times-circle-o
-              .panelList__itemCell
-                .fa.fa-times-circle-o
-              a(href="#/busstop/show").panelList__itemCell Zobacz
-
+    .panelPrzystanki__subtitle Przystanki floty
+    .panelPrzystanki__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
     .panelPrzystanki__navigation
       a(href="#/busstop/add").panelPrzystanki__navigation__item Dodaj Przystanek
-  a(href="#/")
-    span.panelPrzystanki__close
-      span.panelPrzystanki__icon.fa.fa-times
+    .panelPrzystanki__filtrs
+      .panelPrzystanki__filtr
+        label Nazwa przystanku
+        input(placeholder="Szukaj Przystanek...")
+      .panelPrzystanki__filtr
+        label Ulica
+        input(placeholder="Ulica...")
+      .panelPrzystanki__filtr
+        label Biletomat
+        input(type="checkbox")#czyBiletomat
+        label(for="czyBiletomat").-biletomat
+      .panelPrzystanki__filtr
+        label Kiosk
+        input(type="checkbox")#czyKiosk
+        label(for="czyKiosk").-biletomat
+      .panelPrzystanki__table
+        table.responsive(wt-responsive-table)
+          tr
+            th Nazwa przystanku
+            th Ulica
+            th Biletomat
+            th Kiosk
+            th Zarządzanie
+          tr
+            td 123456789
+            td Normalny
+            td Tak
+            td Tak
+            td
+              a(href="#").navigation
+                i.ionicons.ion-ios-location
+              a(href="#").navigation
+                i.ionicons.ion-edit
+              a(href="#").navigation
+                i.ionicons.ion-android-delete.-red
+
+          tr
+            td ..
+            td ..
+            td ..
+            td ..
+            td ..
+
+
+
